--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: YAML lint
-        uses: ibiqlik/action-yamllint-@v3
+        uses: ibiqlik/action-yamllint@v3
         with:
           args: .
 
