--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,5 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Ansible Lint
-        uses: ansible/ansible-lint-action@v4
-        with:
-          args: .
+      - name: Run ansible-lint
+        uses: ansible/ansible-lint@main # or version tag instead of 'main'
