--- a/monitoring/deploy-node-exporter.yaml
+++ b/monitoring/deploy-node-exporter.yaml
@@ -5,7 +5,7 @@
 
   tasks:
     - name: Start the Node Exporter Docker container
-      docker_container:
+      community.docker.docker_container:
         name: node-exporter
         image: prom/node-exporter
         state: started
