--- a/maintinence/update-system-playbook.yaml
+++ b/maintinence/update-system-playbook.yaml
@@ -1,7 +1,8 @@
 ---
-- hosts: servers
+- name: Update all packages to their latest version
+  hosts: servers
   tasks:
-    - name: Update all packages to their latest version
+    - name: Run apt to install latest
       ansible.builtin.apt:
         name: "*"
         state: latest
