--- a/server-setup/tasks/install-docker.yml
+++ b/server-setup/tasks/install-docker.yml
@@ -1,7 +1,7 @@
 ---
 - name: Ensure Docker is installed
   ansible.builtin.shell:
-    cmd: "curl https://get.docker.com | bash -"
+    cmd: curl https://get.docker.com | bash -
 
 - name: Ensure used 'miles' exists
   ansible.builtin.user:
